welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:23: error: 'while' expected but identifier found.
	cp=0;
        ^Poucet:23: error: '(' expected but ';' found.
	cp=0;
            ^Poucet:26: error: illegal start of simple expression
	}
        ^